--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -41,6 +41,15 @@ p{
     padding: 10px;
     background: #d3d3eb;
 }
+.useravatar{
+    margin-right: 10px;
+    width: 50px; 
+    height: 50px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -khtml-border-radius: 50%;
+}
 /*
 #title2>div:nth-of-type(3){
 	margin-left: 4%;
