--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -50,6 +50,15 @@ p{
     -webkit-border-radius: 50%;
     -khtml-border-radius: 50%;
 }
+.useravatar_small{
+	margin-right: 5px;
+    width: 22px; 
+    height: 22px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -khtml-border-radius: 50%;
+}
 /*
 #title2>div:nth-of-type(3){
 	margin-left: 4%;
