--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -64,3 +64,19 @@ p{
 	margin-left: 4%;
 }
 */
+.сollapse{
+	background: #fcfcff;
+	text-align: right;
+}
+.caret-up{
+	border-bottom: 10px solid #000000;
+    border-left: 6px solid rgba(0, 0, 0, 0);
+    border-right: 6px solid rgba(0, 0, 0, 0);
+    content: "";
+    display: inline-block;
+    height: 0;
+    vertical-align: top;
+    width: 0;
+	margin-top: 5px;
+	margin-right: 5px;
+}
